# epaperdisplay

./: .gitignore  Cargo.toml  README.md  build.rs  deploy.sh
.cargo/: config.toml
lib/: DEV_Config.c  DEV_Config.h  EPD_7in5_V2.c  GUI_Paint.c
src/: calendar.rs  main.rs  render.rs  weather.rs
src/EPD/: device.rs  mod.rs  paint.rs
src/EPD/display/: d7in5_v2.rs
src/epd/: bmp.rs  bresenham.rs  device.rs  font.rs  mod.rs  paint.rs  vdevice.rs
src/epd/display/: d7in5_v2.rs  mod.rs  vdisplay.rs
src/epd/font/: font12.rs  font16.rs  font20.rs  font24.rs  font8.rs
