[package]
name = "epaperdisplay"
version = "0.1.0"
authors = ["TaRaKa <git@tomrawcliffe.co.uk>"]
edition = "2018"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bresenham = "0.1.1"
chan = "0.1.23"
ical = "0.6.0"
reqwest = { version = "0.11", features = ["blocking"] }
chrono = "0.4.11"
openssl = { version = "0.10", features = ["vendored"] }


[build-dependencies]
cc = "1.0"

[target.'cfg(any(target_os = "windows", target_os = "macos"))'.dependencies]
sdl2 = "0.34.1"


[target.'cfg(not(any(target_os = "windows", target_os = "macos")))'.dependencies]
rppal = "0.11.3"