[package]
name = "epaperdisplay"
version = "0.1.0"
authors = ["TaRaKa <git@tomrawcliffe.co.uk>"]
edition = "2018"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
virtual = ["sdl2"]

[dependencies]
bresenham = "0.1.1"
log = "0.4"
env_logger = "0.11"
chan = "0.1.23"
ical = "0.6.0"
reqwest = { version = "0.11", features = ["blocking", "json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = "0.4.11"
openssl = { version = "0.10", features = ["vendored"] }


[build-dependencies]
cc = "1.0"

[target.'cfg(not(any(target_os = "windows", target_os = "macos")))'.dependencies]
rppal = "0.11.3"

[dependencies.sdl2]
version = "0.34.1"
optional = true